--- a/src/main/resources/statis/courseDesign/pag2/departmentlist.html
+++ b/src/main/resources/statis/courseDesign/pag2/departmentlist.html
@@ -7,6 +7,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>学生管理系统</title>
   <link rel="stylesheet" href="element-ui/lib/theme-chalk/index.css">
+  <script src="js/vue.js"></script>
+  <script src="element-ui/lib/index.js"></script>
+  <script src="js/axios-0.18.0.js"></script>
+  <script src="js/student/student.js"></script>
 </head>
 <body>
 <div id="div" style="padding: 20px; height: 100%">
@@ -20,7 +24,7 @@
     <el-button type="primary" @click="showAddStu">+ 添加学院</el-button>
   </div>
 
-  <el-table :data="studentScore" class="table-box"  :row-class-name="tableRowClassName">
+  <el-table :data="tableData" class="table-box" >
     <el-table-column prop="departmentLocation" label="学院地址"></el-table-column>
     <el-table-column prop="departmentName" label="学院名称"></el-table-column>
     <el-table-column prop="id" label="学院id"></el-table-column>
@@ -33,14 +37,8 @@
 
   </el-table>
 
-  <el-pagination @size-change="handleSizeChange" @current-change="handleCurrentChange" :current-page="page"
-                 :page-sizes="[5, 10, 20]" :page-size="pageSize" :total="counts"
-                 layout="total, sizes, prev, pager, next, jumper" style="text-align: right; margin-top: 20px">
-  </el-pagination>
-
-
   <el-dialog width="40%" title="添加学院信息" :visible.sync="dialogTableVisible4add">
-    <el-form :model="formData" :rules="rules" ref="formData" label-width="100px">
+    <el-form :model="formData" label-width="100px">
       <el-form-item label="学院地址" prop="departmentLocation">
         <el-input v-model="formData.departmentLocation"></el-input>
       </el-form-item>
@@ -48,17 +46,17 @@
         <el-input v-model="formData.departmentName"></el-input>
       </el-form-item>
       <el-form-item label="学院id" prop="id">
-        <el-input v-model="formData.password"></el-input>
+        <el-input v-model="formData.id"></el-input>
       </el-form-item>
       <el-form-item align="right">
-        <el-button type="primary" @click="addStu()">添加</el-button>
+        <el-button type="primary" @click="addStu(formData)">添加</el-button>
         <el-button @click="resetForm('formData')">重置</el-button>
       </el-form-item>
     </el-form>
   </el-dialog>
 
   <el-dialog width="40%" title="编辑学院信息" :visible.sync="dialogTableVisible4edit">
-    <el-form :model="editFormData" :rules="rules" ref="editForm" label-width="100px">
+    <el-form :model="editFormData"  ref="editForm" label-width="100px">
       <el-form-item label="学院地址" prop="departmentLocation">
         <el-input v-model="editFormData.departmentLocation"></el-input>
       </el-form-item>
@@ -76,57 +74,6 @@
 </div>
 
 <div>
-  <script src="js/vue.js"></script>
-  <script src="element-ui/lib/index.js"></script>
-  <script src="js/axios-0.18.0.js"></script>
-  <script src="js/student/student.js"></script>
-  <script>
-
-    const App = {
-      <!-- 登录 -->
-      data() {
-        return {
-          studentScore: [
-            {
-              "id": "0",
-              "schoolId": "202144011308",
-              "studentName": "张三",
-              "courseName": "高等数学",
-              "score": "80",
-              "teacherName": "李四"
-            }
-          ],
-          studentTotal: 0,
-        }
-      },
-      methods: {
-        getStudentScore() {
-          axios.get("./score/getByStudentId")
-                  .then(function (response) {
-                    console.log(response.data.data);
-                    this.studentScore = response.data.data;
-                    this.studentTotal = response.data.total;
-                    <!-- 给studentScore添加一个key -->
-                    this.studentScore.forEach((item, index) => {
-                      item.key = index;
-                    })
-                    console.log(this.studentScore);
-                    <!-- 重新渲染表格 -->
-                    this.$forceUpdate();
-
-                  })
-                  .catch(function (error) {
-                    console.log(error);
-                  });
-        }
-      }
-    };
-
-    const app = Vue.createApp(App);
-    app.use(ElementPlus);
-    app.mount("#app");
-  </script>
-
 
   <script>
     new Vue({
@@ -137,49 +84,24 @@
         dialogTableVisible4edit: false, //编辑窗口显示状态
         formData: {},//添加表单的数据
         editFormData: {},//编辑表单的数据
-        counts: 0,      //总条数
-        page: 1,        //当前页
-        pageSize: 5,    //每页显示条数
         tableData: [],//表格数据
-        rules: {
-          departmentLocation: [
-            {required: true, message: '请输入学院地址', trigger: 'blur'},
-            {min: 1, max: 20, message: '1 个数字~', trigger: 'blur'}
-          ],
 
-          departmentName: [
-            {required: true, message: '请输入学院名称', trigger: 'blur'},
-            {min: 1, max: 10, message: '1个数字~', trigger: 'blur'}
-          ],
-          id: [
-            {required: true, message: '请输入学院id', trigger: 'blur'},
-            {min: 1, max: 10, message: '长度在 1 到 10 个字符', trigger: 'blur'}
-          ],
-        }
-      },
       created() {
-        //调用分页查询功能
         this.init();
       },
 
       methods: {
         async init () {
-          const params = {
-            page: this.page,
-            pageSize: this.pageSize,
-            idClass: this.inputMessage ? this.inputMessage : undefined
-          }
-          await getStudentList(params).then(res => {
-            console.log(res.data.data);
-            if (String(res.data.code) === '1') {
+            const _this = this;
+            await getStudentList().then(res => {
+              console.log(res.data.data);
+              _this.tableData = res.data.data
+              _this.counts = res.data.total
 
-              this.tableData = res.data.data.records
-              this.counts = res.data.data.total
-            }
-          }).catch(err => {
-            this.$message.error('请求出错了：' + err)
-          })
-        },
+            }).catch(err => {
+              this.$message.error('请求出错了：' + err)
+            })
+          },
         // 分页 条件查询
         handleQuery() {
           this.page = 1;
@@ -190,13 +112,9 @@
           this.dialogTableVisible4add = true;
         },
         //添加学生功能
-        addStu() {
-          // const params = {
-          //     ...this.formData,
-          //     sex: this.formData.sex === '女' ? '0' : '1'
-          // }
+        addStu(params) {
           addStudent(params).then(res => {
-            if(res.data.code === 1) {
+            if(res.data.success === true) {
               this.$message.success("添加成功")
               this.init();
             }
@@ -239,11 +157,10 @@
         updateStu() {
           const params = {
             ...this.editFormData,
-            // sex: this.editFormData.sex === '女' ? '0' : '1'
           }
           updateStudent(params).then(res => {
             console.log(res)
-            if(res.data.code === 1) {
+            if(res.data.success === true) {
               this.$message.success(res.data.data)
               this.init()
             } else {
@@ -279,7 +196,8 @@
 
         },
       },
-    });
+    },
+    );
   </script>
 
 </div>
