--- a/src/main/resources/statis/courseDesign/pag2/couselist.html
+++ b/src/main/resources/statis/courseDesign/pag2/couselist.html
@@ -7,6 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>学生管理系统</title>
     <link rel="stylesheet" href="element-ui/lib/theme-chalk/index.css">
+    <script src="js/vue.js"></script>
+    <script src="element-ui/lib/index.js"></script>
+    <script src="js/axios-0.18.0.js"></script>
+    <script src="js/student/student.js"></script>
 </head>
 <body>
 <div id="div" style="padding: 20px; height: 100%">
@@ -20,7 +24,7 @@
         <el-button type="primary" @click="showAddStu">+ 添加课程</el-button>
     </div>
 
-    <el-table :data="studentScore" class="table-box"  :row-class-name="tableRowClassName">
+    <el-table :data="studentScore" class="table-box" >
         <el-table-column prop="courseName" label="课程名称"></el-table-column>
         <el-table-column prop="departmentId" label="学院id"></el-table-column>
         <el-table-column prop="id" label="课程id"></el-table-column>
@@ -36,14 +40,8 @@
 
     </el-table>
 
-    <el-pagination @size-change="handleSizeChange" @current-change="handleCurrentChange" :current-page="page"
-                   :page-sizes="[5, 10, 20]" :page-size="pageSize" :total="counts"
-                   layout="total, sizes, prev, pager, next, jumper" style="text-align: right; margin-top: 20px">
-    </el-pagination>
-
-
     <el-dialog width="40%" title="添加学生课程信息" :visible.sync="dialogTableVisible4add">
-        <el-form :model="formData" :rules="rules" ref="formData" label-width="100px">
+        <el-form :model="formData"  ref="formData" label-width="100px">
             <el-form-item label="课程名称" prop="courseName">
                 <el-input v-model="formData.courseName"></el-input>
             </el-form-item>
@@ -94,58 +92,6 @@
 </div>
 
 <div>
-    <script src="js/vue.js"></script>
-    <script src="element-ui/lib/index.js"></script>
-    <script src="js/axios-0.18.0.js"></script>
-    <script src="js/student/student.js"></script>
-    <script>
-
-        const App = {
-            <!-- 登录 -->
-            data() {
-                return {
-                    studentScore: [
-                        {
-                            "id": "0",
-                            "schoolId": "202144011308",
-                            "studentName": "张三",
-                            "courseName": "高等数学",
-                            "score": "80",
-                            "teacherName": "李四"
-                        }
-                    ],
-                    studentTotal: 0,
-                }
-            },
-            methods: {
-                getStudentScore() {
-                    axios.get("./score/getByStudentId")
-                        .then(function (response) {
-                            console.log(response.data.data);
-                            this.studentScore = response.data.data;
-                            this.studentTotal = response.data.total;
-                            <!-- 给studentScore添加一个key -->
-                            this.studentScore.forEach((item, index) => {
-                                item.key = index;
-                            })
-                            console.log(this.studentScore);
-                            <!-- 重新渲染表格 -->
-                            this.$forceUpdate();
-
-                        })
-                        .catch(function (error) {
-                            console.log(error);
-                        });
-                }
-            }
-        };
-
-        const app = Vue.createApp(App);
-        app.use(ElementPlus);
-        app.mount("#app");
-    </script>
-
-
     <script>
         new Vue({
             el: "#div",
@@ -155,158 +101,121 @@
                 dialogTableVisible4edit: false, //编辑窗口显示状态
                 formData: {},//添加表单的数据
                 editFormData: {},//编辑表单的数据
-                counts: 0,      //总条数
-                page: 1,        //当前页
-                pageSize: 5,    //每页显示条数
                 tableData: [],//表格数据
-                rules: {
-                    courseName: [
-                        {required: true, message: '请输入课程名称', trigger: 'blur'},
-                        {min: 1, max: 10, message: '1 个数字~', trigger: 'blur'}
-                    ],
-
-                    departmentId: [
-                        {required: true, message: '请输入学院id', trigger: 'blur'},
-                        {min: 1, max: 10, message: '1个数字~', trigger: 'blur'}
-                    ],
-                    id: [
-                        {required: true, message: '请输入课程id', trigger: 'blur'},
-                        {min: 1, max: 10, message: '长度在 1 到 10 个字符', trigger: 'blur'}
-                    ],
-                    teacherId: [
-                        {required: true, message: '请输入教师id', trigger: 'blur'},
-                        {min: 1, max: 11, message: '1 个数字~11个数字', trigger: 'blur'}
-                    ],
-                    score: [
-                        {required: true, message: '请输入成绩', trigger: 'blur'},
-                        {min: 1, max: 11, message: '1 个数字~3个数字', trigger: 'blur'}
-                    ],
-                    Stid: [
-                        {required: true, message: '请输入学生姓名', trigger: 'blur'},
-                        {min: 1, max: 18, message: '1个数字~', trigger: 'blur'}
-                    ],
-                }
-            },
-            created() {
-                //调用分页查询功能
-                this.init();
-            },
-
-            methods: {
-                async init () {
-                    const params = {
-                        page: this.page,
-                        pageSize: this.pageSize,
-                        idClass: this.inputMessage ? this.inputMessage : undefined
-                    }
-                    await getStudentList(params).then(res => {
-                        console.log(res.data.data);
-                        if (String(res.data.code) === '1') {
-
-                            this.tableData = res.data.data.records
-                            this.counts = res.data.data.total
-                        }
-                    }).catch(err => {
-                        this.$message.error('请求出错了：' + err)
-                    })
-                },
-                // 分页 条件查询
-                handleQuery() {
-                    this.page = 1;
-                    this.init();
-                },
-                showAddStu() {
-                    //弹出窗口
-                    this.dialogTableVisible4add = true;
-                },
-                //添加学生功能
-                addStu() {
-                    // const params = {
-                    //     ...this.formData,
-                    //     sex: this.formData.sex === '女' ? '0' : '1'
-                    // }
-                    addStudent(params).then(res => {
-                        if(res.data.code === 1) {
-                            this.$message.success("添加成功")
-                            this.init();
-                        }
-                    }).catch(err => {
-                        this.$message.error('请求出错了：' + err)
-                    })
-                    this.formData = {};
-                    this.dialogTableVisible4add = false;
-                },
-                //改变每页条数时执行的函数
-                handleSizeChange(val) {
-                    //修改分页查询的参数
-                    this.pageSize = val;
-                    //重新执行查询
-                    this.init();
-                },
-                //改变页码时执行的函数
-                handleCurrentChange(val) {
-                    //修改分页查询的参数
-                    this.page = val;
-                    //重新执行查询
+                created() {
+                    //调用分页查询功能
                     this.init();
                 },
 
-                resetForm(formData) {
-                    //双向绑定，输入的数据都赋值给了formData， 清空formData数据
-                    this.formData = {};
-                    //清除表单的校验数据
-                    this.$refs[formData].resetFields();
-                },
-                showEditStu(row) {
-                    //1. 弹出窗口
-                    this.dialogTableVisible4edit = true;
-                    //2. 显示表单数据---相当于之前的数据回显
-                    console.log(row)
-                    this.editFormData = row
-                    this.editFormData.sex = row.sex === '0' ? '女' : '男'
-                },
-                //修改学生
-                updateStu() {
-                    const params = {
-                        ...this.editFormData,
-                        // sex: this.editFormData.sex === '女' ? '0' : '1'
-                    }
-                    updateStudent(params).then(res => {
-                        console.log(res)
-                        if(res.data.code === 1) {
-                            this.$message.success(res.data.data)
-                            this.init()
-                        } else {
-                            this.$message.error("修改失败")
-                        }
-                    })
-                    this.formData = {};
-                    this.dialogTableVisible4edit = false;
-                },
+                methods: {
+                    async init() {
+                        const _this = this;
+                        await getStudentList().then(res => {
+                            console.log(res.data.data);
+                            _this.tableData = res.data.data
+                            _this.counts = res.data.total
 
-                //删除学生
-                deleteStu(row) {
-                    const params = row
-                    this.$confirm('此操作将永久删除该数据， 是否继续', '警告', {
-                        confirmButtonText: '确定',
-                        cancelButtonText: '取消',
-                        type: 'warning'
-                    }).then(() => {
-                        deleteStudent(params).then(res => {
-                            if(res.data.code === 1) {
-                                this.$message.success(res.data.data)
+                        }).catch(err => {
+                            this.$message.error('请求出错了：' + err)
+                        })
+                    },
+                    // 分页 条件查询
+                    handleQuery() {
+                        this.page = 1;
+                        this.init();
+                    },
+                    showAddStu() {
+                        //弹出窗口
+                        this.dialogTableVisible4add = true;
+                    },
+                    //添加学生功能
+                    addStu(params) {
+                        // const params = {
+                        //     ...this.formData,
+                        //     sex: this.formData.sex === '女' ? '0' : '1'
+                        // }
+                        addStudent(params).then(res => {
+                            if (res.data.code === 1) {
+                                this.$message.success("添加成功")
                                 this.init();
+                            }
+                        }).catch(err => {
+                            this.$message.error('请求出错了：' + err)
+                        })
+                        this.formData = {};
+                        this.dialogTableVisible4add = false;
+                    },
+                    //改变每页条数时执行的函数
+                    handleSizeChange(val) {
+                        //修改分页查询的参数
+                        this.pageSize = val;
+                        //重新执行查询
+                        this.init();
+                    },
+                    //改变页码时执行的函数
+                    handleCurrentChange(val) {
+                        //修改分页查询的参数
+                        this.page = val;
+                        //重新执行查询
+                        this.init();
+                    },
+
+                    resetForm(formData) {
+                        //双向绑定，输入的数据都赋值给了formData， 清空formData数据
+                        this.formData = {};
+                        //清除表单的校验数据
+                        this.$refs[formData].resetFields();
+                    },
+                    showEditStu(row) {
+                        //1. 弹出窗口
+                        this.dialogTableVisible4edit = true;
+                        //2. 显示表单数据---相当于之前的数据回显
+                        console.log(row)
+                        this.editFormData = row
+                    },
+                    //修改学生
+                    updateStu() {
+                        const params = {
+                            ...this.editFormData,
+                            // sex: this.editFormData.sex === '女' ? '0' : '1'
+                        }
+                        updateStudent(params).then(res => {
+                            console.log(res)
+                            if (res.data.code === 1) {
+                                this.$message.success(res.data.data)
+                                this.init()
                             } else {
-                                this.$message("删除失败")
+                                this.$message.error("修改失败")
                             }
                         })
-                    }).catch(() => {
-                        this.$message({
-                            type: 'info',
-                            message: '已取消删除'
-                        });
-                    })
+                        this.formData = {};
+                        this.dialogTableVisible4edit = false;
+                    },
 
+                    //删除学生
+                    deleteStu(row) {
+                        const params = row
+                        this.$confirm('此操作将永久删除该数据， 是否继续', '警告', {
+                            confirmButtonText: '确定',
+                            cancelButtonText: '取消',
+                            type: 'warning'
+                        }).then(() => {
+                            deleteStudent(params).then(res => {
+                                if (res.data.code === 1) {
+                                    this.$message.success(res.data.data)
+                                    this.init();
+                                } else {
+                                    this.$message("删除失败")
+                                }
+                            })
+                        }).catch(() => {
+                            this.$message({
+                                type: 'info',
+                                message: '已取消删除'
+                            });
+                        })
+
+                    },
                 },
             },
         });
