--- a/src/main/resources/statis/courseDesign/pag2/stuList.html
+++ b/src/main/resources/statis/courseDesign/pag2/stuList.html
@@ -35,7 +35,7 @@
                 <el-table-column label="操作">
                     <template slot-scope="props">
                         <el-button type="primary" plain @click="showEditStu(props.row)">编辑</el-button>
-                        <el-button type="danger" plain @click="deleteStu(tableData[props.row].id)">删除</el-button>
+                        <el-button type="danger" plain @click="deleteStu(props.row)">删除</el-button>
                     </template>
                 </el-table-column>
 
@@ -67,9 +67,6 @@
 
             <el-dialog width="40%" title="编辑学生信息" :visible.sync="dialogTableVisible4edit">
                 <el-form :model="editFormData"  ref="editForm" label-width="100px">
-                    <el-form-item label="班级" prop="idClass">
-                        <el-input v-model="editFormData.idClass"></el-input>
-                    </el-form-item>
                     <el-form-item label="id" prop="id">
                         <el-input v-model="editFormData.id"></el-input>
                     </el-form-item>
@@ -131,7 +128,7 @@
                 //添加学生功能
                 addStu(params) {
                     addStudent(params).then(res => {
-                        if(res.data.success === true) {
+                        if(res.data.success === 1) {
                             this.$message.success("添加成功")
                             this.init();
                         }
@@ -141,21 +138,6 @@
                     this.formData = {};
                     this.dialogTableVisible4add = false;
                 },
-                //改变每页条数时执行的函数
-                handleSizeChange(val) {
-                    //修改分页查询的参数
-                    this.pageSize = val;
-                    //重新执行查询
-                    this.init();
-                },
-                //改变页码时执行的函数
-                handleCurrentChange(val) {
-                    //修改分页查询的参数
-                    this.page = val;
-                    //重新执行查询
-                    this.init();
-                },
-
                 resetForm(formData) {
                     //双向绑定，输入的数据都赋值给了formData， 清空formData数据
                     this.formData = {};
@@ -174,8 +156,9 @@
                 updateStu() {
                     const params = {
                         ...this.editFormData,
-                        studentSex: this.editFormData.studentSex === '女' ? '0' : '1'
+                        studentSex: this.editFormData.studentSex
                     }
+                    console.log(params)
                     updateStudent(params).then(res => {
                         console.log(res)
                         if(res.data.success === true) {
@@ -187,11 +170,12 @@
                     })
                     this.formData = {};
                     this.dialogTableVisible4edit = false;
+                    this.init();
                 },
 
                 //删除学生
                 deleteStu(row) {
-                    const params = row
+                    const params = row.id;
                     console.log(params)
                     this.$confirm('此操作将永久删除该数据， 是否继续', '警告', {
                         confirmButtonText: '确定',
@@ -199,7 +183,7 @@
                         type: 'warning'
                     }).then(() => {
                         deleteStudent(params).then(res => {
-                            if(res.data.code === 1) {
+                            if(res.data.success === true) {
                                 this.$message.success(res.data.data)
                                 this.init();
                             } else {
@@ -212,7 +196,7 @@
                             message: '已取消删除'
                         });
                     })
-
+                    this.init();
                 },
             },
         });
