--- a/src/main/resources/statis/courseDesign/pag2/stuList.html
+++ b/src/main/resources/statis/courseDesign/pag2/stuList.html
@@ -15,6 +15,8 @@
     <body>
         <div id="div" style="padding: 20px; height: 100%">
             <div><b style="color: #000; font-size: 30px;">学生列表</b></div>
+            <el-button type="primary" @click="showAddStu">+ 添加学生</el-button>
+
             <el-table :data="tableData" class="table-box">
                 <el-table-column prop="id" label="id"></el-table-column>
                 <el-table-column prop="schoolId" label="学号"></el-table-column>
