--- a/src/main/resources/statis/courseDesign/pag2/stuList.html
+++ b/src/main/resources/statis/courseDesign/pag2/stuList.html
@@ -15,8 +15,14 @@
     <body>
         <div id="div" style="padding: 20px; height: 100%">
             <div><b style="color: #000; font-size: 30px;">学生列表</b></div>
-            <el-button type="primary" @click="showAddStu">+ 添加学生</el-button>
-
+            <div style="display: flex; justify-content: space-between;margin-bottom: 20px; margin-top: 20px;">
+                <el-input style="width: 250px" v-model="inputMessage" placeholder="请输入课程" clearable
+                          @keyup.enter.native="handleQuery">
+                    <i slot="prefix" class="el-input__icon el-icon-search" style="cursor: pointer"
+                       @click="handleQuery"></i>
+                </el-input>
+                <el-button type="primary" @click="showAddStu">+ 添加课程</el-button>
+            </div>
             <el-table :data="tableData" class="table-box">
                 <el-table-column prop="id" label="id"></el-table-column>
                 <el-table-column prop="schoolId" label="学号"></el-table-column>
@@ -111,8 +117,8 @@
                 },
                 // 分页 条件查询
                 handleQuery() {
-                    this.page = 1;
-                    this.init();
+
+
                 },
                 showAddStu() {
                     //弹出窗口
