--- a/src/main/resources/statis/courseDesign/pag2/stuList.html
+++ b/src/main/resources/statis/courseDesign/pag2/stuList.html
@@ -15,6 +15,11 @@
     <body>
         <div id="div" style="padding: 20px; height: 100%">
             <div><b style="color: #000; font-size: 30px;">学生列表</b></div>
+                <el-input style="width: 250px" v-model="inputMessage" placeholder="请输入学生" clearable
+                          @keyup.enter.native="handleQuery">
+                    <i slot="prefix" class="el-input__icon el-icon-search" style="cursor: pointer"
+                       @click="handleQuery"></i>
+                </el-input>
             <el-button type="primary" @click="showAddStu">+ 添加学生</el-button>
 
             <el-table :data="tableData" class="table-box">
