--- a/src/main/resources/statis/courseDesign/pag2/teacherList.html
+++ b/src/main/resources/statis/courseDesign/pag2/teacherList.html
@@ -10,12 +10,12 @@
   <script src="js/vue.js"></script>
   <script src="element-ui/lib/index.js"></script>
   <script src="js/axios-0.18.0.js"></script>
-  <script src="js/student/student.js"></script>
+  <script src="js/teacher/teacher.js"></script>
 </head>
 <body>
 <div id="div" style="padding: 20px; height: 100%">
   <div><b style="color: #000; font-size: 30px;">教师列表</b></div>
-    <el-button type="primary" @click="showAddStu">+ 添加教师</el-button>
+    <el-button type="primary" @click="showAddTeacher">+ 添加教师</el-button>
 
     <el-table :data="tableData" class="table-box">
       <el-table-column prop="password" label="密码"></el-table-column>
@@ -24,8 +24,8 @@
       <el-table-column prop="teacherPhone" label="手机号"></el-table-column>
       <el-table-column label="操作">
         <template slot-scope="props">
-          <el-button type="primary" plain @click="showEditStu(props.row)">编辑</el-button>
-          <el-button type="danger" plain @click="deleteStu(props.row)">删除</el-button>
+          <el-button type="primary" plain @click="showEditTeacher(props.row)">编辑</el-button>
+          <el-button type="danger" plain @click="deleteTeacher(props.row)">删除</el-button>
         </template>
       </el-table-column>
 
@@ -46,7 +46,7 @@
           <el-input v-model="formData.teacherPhone"></el-input>
         </el-form-item>
         <el-form-item align="right">
-          <el-button type="primary" @click="addStu(formData)">添加</el-button>
+          <el-button type="primary" @click="addTeacher(formData)">添加</el-button>
           <el-button @click="resetForm('formData')">重置</el-button>
         </el-form-item>
       </el-form>
@@ -67,7 +67,7 @@
           <el-input v-model="editFormData.teacherPhone"></el-input>
         </el-form-item>
         <el-form-item align="right">
-          <el-button type="primary" @click="updateStu()">修改</el-button>
+          <el-button type="primary" @click="updateTeacher()">修改</el-button>
         </el-form-item>
       </el-form>
     </el-dialog>
@@ -91,7 +91,7 @@
       methods: {
         async init () {
           const _this = this;
-          await getStudentList().then(res => {
+          await getTeacherList().then(res => {
             console.log(res.data.data);
             _this.tableData = res.data.data
             _this.counts = res.data.total
@@ -100,18 +100,14 @@
             this.$message.error('请求出错了：' + err)
           })
         },
-        // 分页 条件查询
-        handleQuery() {
-          this.page = 1;
-          this.init();
-        },
-        showAddStu() {
+        showAddTeacher() {
           //弹出窗口
           this.dialogTableVisible4add = true;
         },
         //添加学生功能
-        addStu(params) {
-          addStudent(params).then(res => {
+        addTeacher(params) {
+          console.log(params);
+          addTeacher(params).then(res => {
             if(res.data.success === 1) {
               this.$message.success("添加成功")
               this.init();
@@ -128,22 +124,21 @@
           //清除表单的校验数据
           this.$refs[formData].resetFields();
         },
-        showEditStu(row) {
+        showEditTeacher(row) {
           //1. 弹出窗口
           this.dialogTableVisible4edit = true;
           //2. 显示表单数据---相当于之前的数据回显
           console.log(row)
           this.editFormData = row
-          this.editFormData.studentSex = row.studentSex === '0' ? '女' : '男'
         },
         //修改学生
-        updateStu() {
+        updateTeacher() {
           const params = {
             ...this.editFormData,
             studentSex: this.editFormData.studentSex
           }
           console.log(params)
-          updateStudent(params).then(res => {
+          updateTeacher(params).then(res => {
             console.log(res)
             if(res.data.success === true) {
               this.$message.success(res.data.data)
@@ -158,7 +153,7 @@
         },
 
         //删除学生
-        deleteStu(row) {
+        deleteTeacher(row) {
           const params = row.id;
           console.log(params)
           this.$confirm('此操作将永久删除该数据， 是否继续', '警告', {
@@ -166,7 +161,7 @@
             cancelButtonText: '取消',
             type: 'warning'
           }).then(() => {
-            deleteStudent(params).then(res => {
+            deleteTeacher(params).then(res => {
               if(res.data.success === true) {
                 this.$message.success(res.data.data)
                 this.init();
