--- a/src/main/resources/statis/courseDesign/pag2/deparmentList.html
+++ b/src/main/resources/statis/courseDesign/pag2/deparmentList.html
@@ -10,13 +10,13 @@
     <script src="js/vue.js"></script>
     <script src="element-ui/lib/index.js"></script>
     <script src="js/axios-0.18.0.js"></script>
-    <script src="js/student/student.js"></script>
+    <script src="js/department/department.js"></script>
 </head>
 <body>
 <div id="div" style="padding: 20px; height: 100%">
     <div><b style="color: #000; font-size: 30px;">学院列表</b></div>
     <div style="display: flex; justify-content: space-between;margin-bottom: 20px; margin-top: 20px;">
-        <el-button type="primary" @click="showAddStu">+ 添加学院</el-button>
+        <el-button type="primary" @click="showAdddepartment">+ 添加学院</el-button>
     </div>
 
     <el-table :data="tableData" class="table-box" >
@@ -25,8 +25,8 @@
         <el-table-column prop="id" label="学院id"></el-table-column>
         <el-table-column label="操作">
             <template slot-scope="props">
-                <el-button type="primary" plain @click="showEditStu(props.row)">编辑</el-button>
-                <el-button type="danger" plain @click="deleteStu(props.row)">删除</el-button>
+                <el-button type="primary" plain @click="showEditdepartment(props.row)">编辑</el-button>
+                <el-button type="danger" plain @click="deletedepartment(props.row)">删除</el-button>
             </template>
         </el-table-column>
 
@@ -44,7 +44,7 @@
                 <el-input v-model="formData.id"></el-input>
             </el-form-item>
             <el-form-item align="right">
-                <el-button type="primary" @click="addStu(formData)">添加</el-button>
+                <el-button type="primary" @click="adddepartment(formData)">添加</el-button>
                 <el-button @click="resetForm('formData')">重置</el-button>
             </el-form-item>
         </el-form>
@@ -62,7 +62,7 @@
                 <el-input v-model="editFormData.id"></el-input>
             </el-form-item>
             <el-form-item align="right">
-                <el-button type="primary" @click="updateStu()">修改</el-button>
+                <el-button type="primary" @click="updatedepartment()">修改</el-button>
             </el-form-item>
         </el-form>
     </el-dialog>
@@ -100,12 +100,12 @@
                 this.page = 1;
                 this.init();
             },
-            showAddStu() {
+            showAdddepartment() {
                 //弹出窗口
                 this.dialogTableVisible4add = true;
             },
             //添加学生功能
-            addStu(params) {
+            adddepartment(params) {
                 adddepartment(params).then(res => {
                     if(res.data.success === 1) {
                         this.$message.success("添加成功")
@@ -123,22 +123,20 @@
                 //清除表单的校验数据
                 this.$refs[formData].resetFields();
             },
-            showEditStu(row) {
+            showEditdepartment(row) {
                 //1. 弹出窗口
                 this.dialogTableVisible4edit = true;
                 //2. 显示表单数据---相当于之前的数据回显
                 console.log(row)
                 this.editFormData = row
-                this.editFormData.studentSex = row.studentSex === '0' ? '女' : '男'
             },
             //修改学生
-            updateStu() {
+            updatedepartment() {
                 const params = {
                     ...this.editFormData,
-                    studentSex: this.editFormData.studentSex
                 }
                 console.log(params)
-                updateStudent(params).then(res => {
+                updatedepartment(params).then(res => {
                     console.log(res)
                     if(res.data.success === true) {
                         this.$message.success(res.data.data)
@@ -153,7 +151,7 @@
             },
 
             //删除学生
-            deleteStu(row) {
+            deletedepartment(row) {
                 const params = row.id;
                 console.log(params)
                 this.$confirm('此操作将永久删除该数据， 是否继续', '警告', {
@@ -161,7 +159,7 @@
                     cancelButtonText: '取消',
                     type: 'warning'
                 }).then(() => {
-                    deleteStudent(params).then(res => {
+                    deletedepartment(params).then(res => {
                         if(res.data.success === true) {
                             this.$message.success(res.data.data)
                             this.init();
