--- a/src/main/resources/statis/courseDesign/pag2/couselist.html
+++ b/src/main/resources/statis/courseDesign/pag2/couselist.html
@@ -23,7 +23,7 @@
         </el-input>
         <el-button type="primary" @click="showAddStu">+ 添加课程</el-button>
 
-    <el-table :data="studentScore" class="table-box" >
+    <el-table :data="tableData" class="table-box" >
         <el-table-column prop="courseName" label="课程名称"></el-table-column>
         <el-table-column prop="departmentId" label="学院id"></el-table-column>
         <el-table-column prop="id" label="课程id"></el-table-column>
