--- a/src/main/resources/statis/courseDesign/adminview.html
+++ b/src/main/resources/statis/courseDesign/adminview.html
@@ -130,21 +130,35 @@
                   {
                     id: '2',
                     name: '学生管理',
-                    url: 'pag2/stuList.html',
+                    url: 'pag2/scoreList.html',
                     icon: 'icon-category'
                   },
                   {
                     id: '3',
-                    name: '学院管理',
-                    url: 'pag2/couselist.html',
+                    name: '成绩管理',
+                    url: 'pag2/scoreList.html',
                     icon: 'icon-category'
                   },
                   {
                     id: '4',
-                    name: '课程管理',
-                    url: 'pag2/departmentlist.html',
+                    name: '老师管理',
+                    url: 'pag2/teacherList.html',
                     icon: 'icon-category'
                   },
+                  {
+                    id: '5',
+                    name: '课程管理',
+                    url: 'pag2/courseList.html',
+                    icon: 'icon-category'
+                  },
+                  {
+                    id: '6',
+                    name: '学院管理',
+                    url: 'pag2/deparmentList.html',
+                    icon: 'icon-category'
+                  },
+
+
 
               //   ],
               // },
