--- a/src/main/resources/statis/courseDesign/pag2/courseList.html
+++ b/src/main/resources/statis/courseDesign/pag2/courseList.html
@@ -53,14 +53,14 @@
             <el-form-item label="课程id" prop="id">
                 <el-input v-model="editFormData.id"></el-input>
             </el-form-item>
-            <el-form-item label="课程名称" prop="courseName">
+            <el-form-item label="课程id" prop="courseName">
                 <el-input v-model="editFormData.courseName"></el-input>
             </el-form-item>
-            <el-form-item label="学院id" prop="departmentId">
+            <el-form-item label="学生id" prop="departmentId">
                 <el-input v-model="editFormData.departmentId"></el-input>
             </el-form-item>
-            <el-form-item label="教师id" prop="teacherId">
-                <el-input v-model="editFormData.teacherId"></el-input>
+            <el-form-item label="分数" prop="teacherId">
+                <el-input v-model="editFormData.score"></el-input>
             </el-form-item>
             <el-form-item align="right">
                 <el-button type="primary" @click="updatecourse()">修改</el-button>
