--- a/src/main/resources/statis/courseDesign/pag2/deparmentList.html
+++ b/src/main/resources/statis/courseDesign/pag2/deparmentList.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -19,7 +18,7 @@
         <el-button type="primary" @click="showAdddepartment">+ 添加学院</el-button>
     </div>
 
-    <el-table :data="tableData" class="table-box" >
+    <el-table :data="tableData" class="table-box">
         <el-table-column prop="departmentLocation" label="学院地址"></el-table-column>
         <el-table-column prop="departmentName" label="学院名称"></el-table-column>
         <el-table-column prop="id" label="学院id"></el-table-column>
@@ -40,26 +39,20 @@
             <el-form-item label="学院名称" prop="departmentName">
                 <el-input v-model="formData.departmentName"></el-input>
             </el-form-item>
-            <el-form-item label="学院id" prop="id">
-                <el-input v-model="formData.id"></el-input>
-            </el-form-item>
             <el-form-item align="right">
-                <el-button type="primary" @click="adddepartment(formData)">添加</el-button>
+                <el-button type="primary" @click="addDepartment(formData)">添加</el-button>
                 <el-button @click="resetForm('formData')">重置</el-button>
             </el-form-item>
         </el-form>
     </el-dialog>
 
     <el-dialog width="40%" title="编辑学院信息" :visible.sync="dialogTableVisible4edit">
-        <el-form :model="editFormData"  ref="editForm" label-width="100px">
+        <el-form :model="editFormData" ref="editForm" label-width="100px">
             <el-form-item label="学院地址" prop="departmentLocation">
                 <el-input v-model="editFormData.departmentLocation"></el-input>
             </el-form-item>
             <el-form-item label="学院名称" prop="departmentName">
                 <el-input v-model="editFormData.departmentName"></el-input>
-            </el-form-item>
-            <el-form-item label="学院id" prop="id">
-                <el-input v-model="editFormData.id"></el-input>
             </el-form-item>
             <el-form-item align="right">
                 <el-button type="primary" @click="updatedepartment()">修改</el-button>
@@ -84,7 +77,7 @@
         },
 
         methods: {
-            async init () {
+            async init() {
                 const _this = this;
                 await getdepartmentList().then(res => {
                     console.log(res.data.data);
@@ -105,9 +98,9 @@
                 this.dialogTableVisible4add = true;
             },
             //添加学生功能
-            adddepartment(params) {
-                adddepartment(params).then(res => {
-                    if(res.data.success === 1) {
+            addDepartment(params) {
+                addDepartment(params).then(res => {
+                    if (res.data.success === 1) {
                         this.$message.success("添加成功")
                         this.init();
                     }
@@ -138,7 +131,7 @@
                 console.log(params)
                 updatedepartment(params).then(res => {
                     console.log(res)
-                    if(res.data.success === true) {
+                    if (res.data.success === true) {
                         this.$message.success(res.data.data)
                         this.init()
                     } else {
@@ -160,7 +153,7 @@
                     type: 'warning'
                 }).then(() => {
                     deletedepartment(params).then(res => {
-                        if(res.data.success === true) {
+                        if (res.data.success === true) {
                             this.$message.success(res.data.data)
                             this.init();
                         } else {
