--- a/src/main/resources/statis/courseDesign/pag2/scoreList.html
+++ b/src/main/resources/statis/courseDesign/pag2/scoreList.html
@@ -20,12 +20,12 @@
     <i slot="prefix" class="el-input__icon el-icon-search" style="cursor: pointer"
        @click="handleQuery"></i>
   </el-input>
-  <el-button type="primary" @click="showAddStu">+ 添加成绩</el-button>
+  <el-button type="primary" @click="showAddscore">+ 添加成绩</el-button>
   <el-table :data="tableData" class="table-box" >
     <el-table-column prop="schoolId" label="学号"></el-table-column>
-    <el-table-column prop="scoreId" label="成绩id"></el-table-column>
+    <el-table-column prop="id" label="成绩id"></el-table-column>
     <el-table-column prop="studentName" label="学生姓名"></el-table-column>
-    <el-table-column prop="scoreName" label="课程名"></el-table-column>
+    <el-table-column prop="courseName" label="课程名"></el-table-column>
     <el-table-column prop="score" label="成绩"></el-table-column>
     <el-table-column prop="teacherName" label="教师姓名"></el-table-column>
     <el-table-column label="操作">
@@ -34,73 +34,46 @@
         <el-button type="danger" plain @click="deletescore(props.row)">删除</el-button>
       </template>
     </el-table-column>
-
-  </el-table>
-  <el-table :data="tableData" class="table-box" >
-    <el-table-column prop="schoolId" label="学号"></el-table-column>
-    <el-table-column prop="scoreId" label="成绩id"></el-table-column>
-    <el-table-column prop="studentName" label="学生姓名"></el-table-column>
-    <el-table-column prop="scoreName" label="课程名称"></el-table-column>
-    <el-table-column prop="score" label="成绩"></el-table-column>
-    <el-table-column prop="teacherName" label="教师姓名"></el-table-column>
-    <el-table-column label="操作">
-      <template slot-scope="props">
-        <el-button type="primary" plain @click="showEditStu(props.row)">编辑</el-button>
-        <el-button type="danger" plain @click="deleteStu(props.row)">删除</el-button>
-      </template>
-    </el-table-column>
-
   </el-table>
 
   <el-dialog width="40%" title="添加学生成绩信息" :visible.sync="dialogTableVisible4add">
     <el-form :model="formData"  ref="formData" label-width="100px">
-      <el-form-item label="学号" prop="schoolId">
-        <el-input v-model="formData.schoolId"></el-input>
-      </el-form-item>
-      <el-form-item label="成绩id" prop="scoreId">
-        <el-input v-model="formData.scoreId"></el-input>
-      </el-form-item>
-      <el-form-item label="课程名" prop="scoreName">
-        <el-input v-model="formData.scoreName"></el-input>
+      <el-form-item label="课程id" prop="courseId">
+        <el-input v-model="formData.courseId"></el-input>
       </el-form-item>
       <el-form-item label="成绩" prop="score">
         <el-input v-model="formData.score"></el-input>
       </el-form-item>
-      <el-form-item label="教师名称" prop="teacherName">
-        <el-input v-model="formData.teacherName"></el-input>
+      <el-form-item label="学生id" prop="studentId">
+        <el-input v-model="formData.studentId"></el-input>
       </el-form-item>
       <el-form-item align="right">
-        <el-button type="primary" @click="addscore()">添加</el-button>
+        <el-button type="primary" @click="addScore(formData)">添加</el-button>
         <el-button @click="resetForm('formData')">重置</el-button>
       </el-form-item>
     </el-form>
   </el-dialog>
 
   <el-dialog width="40%" title="编辑成绩信息" :visible.sync="dialogTableVisible4edit">
-    <el-form :model="editFormData" :rules="rules" ref="editForm" label-width="100px">
-      <el-form-item label="学号" prop="schoolId">
-        <el-input v-model="editFormData.schoolId"></el-input>
-      </el-form-item>
-      <el-form-item label="成绩id" prop="scoreId">
-        <el-input v-model="editFormData.scoreId"></el-input>
-      </el-form-item>
-      <el-form-item label="学生姓名" prop="studentName">
+    <el-form :model="editFormData" ref="editForm" label-width="100px">
+      <el-form-item label="id" prop="score">
         <el-input v-model="editFormData.id"></el-input>
       </el-form-item>
-      <el-form-item label="课程名" prop="scoreName">
-        <el-input v-model="editFormData.scoreName"></el-input>
+      <el-form-item label="课程id" prop="courseId">
+        <el-input v-model="editFormData.courseId"></el-input>
       </el-form-item>
       <el-form-item label="成绩" prop="score">
         <el-input v-model="editFormData.score"></el-input>
       </el-form-item>
-      <el-form-item label="教师姓名" prop="teacherName">
-        <el-input v-model="editFormData.teacherName"></el-input>
+      <el-form-item label="学生id" prop="teacherName">
+        <el-input v-model="editFormData.studentId"></el-input>
       </el-form-item>
       <el-form-item align="right">
-        <el-button type="primary" @click="updatescore()">修改</el-button>
+        <el-button type="primary" @click="updateScore()">修改</el-button>
       </el-form-item>
     </el-form>
   </el-dialog>
+
 </div>
 
 <script>
@@ -132,17 +105,22 @@
       },
       // 分页 条件查询
       handleQuery() {
-        this.page = 1;
-        this.init();
+          getScoreByStudentName(this.inputMessage).then(res => {
+            this.tableData = res.data.data
+            this.counts = res.data.total
+          }).catch(err => {
+            this.$message.error('请求出错了：' + err)
+          })
       },
       showAddscore() {
         //弹出窗口
         this.dialogTableVisible4add = true;
       },
       //添加学生功能
-      addscore(params) {
-        addscore(params).then(res => {
-          if(res.data.success === 1) {
+      addScore(params) {
+        console.log(params);
+        addScoreById(params).then(res => {
+          if(res.data.success === true){
             this.$message.success("添加成功")
             this.init();
           }
@@ -162,16 +140,16 @@
         //1. 弹出窗口
         this.dialogTableVisible4edit = true;
         //2. 显示表单数据---相当于之前的数据回显
-        console.log(row)
+
         this.editFormData = row
+
+        console.log(this.editFormData)
       },
       //修改学生
-      updatescore() {
-        const params = {
-          ...this.editFormData,
-        }
-        console.log(params)
-        updatescore(params).then(res => {
+      updateScore() {
+        console.log(this.editFormData);
+        const data = this.editFormData;
+        updatescore(data).then(res => {
           console.log(res)
           if(res.data.success === true) {
             this.$message.success(res.data.data)
