--- a/src/main/resources/statis/courseDesign/pag2/courseList.html
+++ b/src/main/resources/statis/courseDesign/pag2/courseList.html
@@ -103,7 +103,7 @@
             //添加学生功能
             addcourse(params) {
                 addcourse(params).then(res => {
-                    if(res.data.success === 1) {
+                    if(res.data.success === true) {
                         this.$message.success("添加成功")
                         this.init();
                     }
