--- a/src/main/resources/statis/courseDesign/pag2/teacherList.html
+++ b/src/main/resources/statis/courseDesign/pag2/teacherList.html
@@ -108,7 +108,7 @@
         addTeacher(params) {
           console.log(params);
           addTeacher(params).then(res => {
-            if(res.data.success === 1) {
+            if(res.data.success === true) {
               this.$message.success("添加成功")
               this.init();
             }
