--- a/src/main/resources/statis/courseDesign/pag2/courseList.html
+++ b/src/main/resources/statis/courseDesign/pag2/courseList.html
@@ -39,7 +39,7 @@
                 <el-input v-model="formData.departmentId"></el-input>
             </el-form-item>
             <el-form-item label="教师id" prop="teacherId">
-                <el-input v-model="formData.password"></el-input>
+                <el-input v-model="formData.teacherId"></el-input>
             </el-form-item>
             <el-form-item align="right">
                 <el-button type="primary" @click="addcourse(formData)">添加</el-button>
@@ -60,7 +60,7 @@
                 <el-input v-model="editFormData.departmentId"></el-input>
             </el-form-item>
             <el-form-item label="分数" prop="teacherId">
-                <el-input v-model="editFormData.score"></el-input>
+                <el-input v-model="editFormData.teacherId"></el-input>
             </el-form-item>
             <el-form-item align="right">
                 <el-button type="primary" @click="updatecourse()">修改</el-button>
